[metadata]
name = smd-cyflash
version = attr: cyflash.__version__
description = "Tool for flashing data to Cypress PSoC devices via bootloader."
long_description= file: README.md
author = "Nick Johnson"
author_email = "nick@arachnidlabs.com"
maintainer = "Strain Measurement Devices"
url = "https://github.com/StrainMeasurementDevices/cyflash/tree/smd"
include_package_data = True

[options]
packages = cyflash
python_requires = >=3.7
install_requires =
    pyserial
    six>=1.10
    future

[options.extras_require]
CANbus = python-can>=1.4

[options.entry_points]
console_scripts =
    cyflash = cyflash.cli:main